fix color contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -460,12 +460,20 @@ img.newsroom{
   
   /* Number text (1/3 etc) */
 .numbertext {
-	color: rgb(51, 161, 189);
 	font-size: 12px;
 	padding: 8px 12px;
 	position: absolute;
 	top: 0;
 }
+
+.numbertext.a, .numbertext.b{
+	color: black;
+}
+
+.numbertext.c{
+	color:white;
+}
+
   
   /* The dots/bullets/indicators */
 .dot {
@@ -571,8 +579,15 @@ img.newsroom{
 		font-size: 20px;
 	}
 
+
 	img.newsroom, img.don-quixote{
 		width: 70vw;
+	}
+
+	div.fade{
+		width: 70vw;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	.home h1{
@@ -588,6 +603,8 @@ img.newsroom{
 		margin-left: 30px;
 		margin-right: 30px;
 	}
+
+
 
 
 	/* EVENTS */
@@ -620,7 +637,11 @@ img.newsroom{
 		width: 100vw;
 	}
 
-	.home img.newsroom{
+	.numbertext {
+		left: 0;
+	}
+
+	div.fade ,.home img.newsroom{
 		width: 45vw;
 		margin-bottom: 15px;
 	}
